force-app/main/default/objects/QIS_Sales_Rep_Measure__c/QIS_Sales_Rep_Measure__c.object-meta.xml
<CustomObject>
    <description>Monthly Review of Agents by the Team Leaders/Managers</description>
    <label>QIS Sales Rep Measure</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{00}</displayFormat>
        <label>QIS Sales Rep Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIS Sales Rep Measure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>