force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Account_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Account_Reviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Reviews</label>
    <type>Checkbox</type>
</CustomField>