force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Ad_Hoc_Projects__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hoc_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Hoc Projects</label>
    <type>Checkbox</type>
</CustomField>