force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Cisco__c.field-meta.xml
<CustomField>
    <fullName>Cisco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cisco</label>
    <type>Checkbox</type>
</CustomField>