force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Customer_Service_Award__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service Award</label>
    <type>Checkbox</type>
</CustomField>