force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Effect_Delegation__c.field-meta.xml
<CustomField>
    <fullName>Effect_Delegation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Effect Delegation</label>
    <type>Checkbox</type>
</CustomField>