force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Event_Function__c.field-meta.xml
<CustomField>
    <fullName>Event_Function__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event or Function</label>
    <type>Checkbox</type>
</CustomField>