force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Feedback_on_Personal_Development__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on_Personal_Development__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback on Personal Development</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>