force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Feedback_on_Role_specific_Skill_set__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on_Role_specific_Skill_set__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback on Role specific Skill set</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>