force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Internal_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Internal_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Follow up</label>
    <type>Checkbox</type>
</CustomField>