force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Lead_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Qualification</label>
    <type>Checkbox</type>
</CustomField>