force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Month_Actual_AR__c.field-meta.xml
<CustomField>
    <fullName>Month_Actual_AR__c</fullName>
    <inlineHelpText>Account Review</inlineHelpText>
    <label>Month Actual - AR</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>