force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Month_Actual_Cases__c.field-meta.xml
<CustomField>
    <fullName>Month_Actual_Cases__c</fullName>
    <label>Month Actual - Cases</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>