force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Month_Actual_CS__c.field-meta.xml
<CustomField>
    <fullName>Month_Actual_CS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Call Score</inlineHelpText>
    <label>Month Actual - CS</label>
    <length>2</length>
    <type>Text</type>
</CustomField>