force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Month_Actual_FB__c.field-meta.xml
<CustomField>
    <fullName>Month_Actual_FB__c</fullName>
    <inlineHelpText>Feedback</inlineHelpText>
    <label>Month Actual - FB</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>