force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Month_Actual_OG__c.field-meta.xml
<CustomField>
    <fullName>Month_Actual_OG__c</fullName>
    <inlineHelpText>Opportunity Generation</inlineHelpText>
    <label>Month Actual - OG</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>