force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Month_Actual_SE__c.field-meta.xml
<CustomField>
    <fullName>Month_Actual_SE__c</fullName>
    <inlineHelpText>Stakeholder Engagement</inlineHelpText>
    <label>Month Actual - SE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>