force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Motivation__c.field-meta.xml
<CustomField>
    <fullName>Motivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motivation</label>
    <type>Checkbox</type>
</CustomField>