force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Performance_Probation_Reviews_Monthly_KP__c.field-meta.xml
<CustomField>
    <fullName>Performance_Probation_Reviews_Monthly_KP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance/Probation Reviews/Monthly KP</label>
    <type>Checkbox</type>
</CustomField>