force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Policies_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Policies_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policies &amp; Procedures</label>
    <type>Checkbox</type>
</CustomField>