force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Punctuality__c.field-meta.xml
<CustomField>
    <fullName>Punctuality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Punctuality</label>
    <type>Checkbox</type>
</CustomField>