force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Qantas_College__c.field-meta.xml
<CustomField>
    <fullName>Qantas_College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas College</label>
    <type>Checkbox</type>
</CustomField>