force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/QF_Sponsorship_Event__c.field-meta.xml
<CustomField>
    <fullName>QF_Sponsorship_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QF Sponsorship Event</label>
    <type>Checkbox</type>
</CustomField>