force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Renewal_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Qualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Qualification</label>
    <type>Checkbox</type>
</CustomField>