force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Requests_Projects_Adhoc__c.field-meta.xml
<CustomField>
    <fullName>Requests_Projects_Adhoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requests (Projects &amp; Adhoc)</label>
    <type>Checkbox</type>
</CustomField>