force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Division</field>
            <operation>equals</operation>
            <value>CS - Qantas Inside Sales (07618)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>QIS_Sales_Rep_Measure</relationshipName>
    <type>Lookup</type>
</CustomField>