force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Sales_Rep_Score__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Score__c</fullName>
    <formula>IF (ISPICKVAL(Score__c , &quot;O&quot;),IMAGE(&apos;https://qantas--c.ap1.visual.force.com/resource/1469693900000/Q6&apos;, &apos;Six Star&apos;),
IF (ISPICKVAL(Score__c , &quot;CI&quot;),IMAGE(&apos;https://qantas--c.ap1.visual.force.com/resource/1469693900000/Q2&apos;, &apos;Two Star&apos;),
IF (ISPICKVAL(Score__c , &quot;SI&quot;),IMAGE(&apos;https://qantas--c.ap1.visual.force.com/resource/1469693900000/Q3&apos;, &apos;Three Star&apos;),
IF (ISPICKVAL(Score__c , &quot;FE&quot;),IMAGE(&apos;https://qantas--c.ap1.visual.force.com/resource/1469693900000/Q4&apos;, &apos;Four Star&apos;),
IF (ISPICKVAL(Score__c , &quot;EE&quot;),IMAGE(&apos;https://qantas--c.ap1.visual.force.com/resource/1469693900000/Q5&apos;, &apos;Five Star&apos;),
IMAGE(&apos;https://qantas--c.ap1.visual.force.com/resource/1469693900000/Q1&apos;, &apos;One Star&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Performance Score</label>
    <type>Text</type>
</CustomField>