force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Sales_Skills_Business_Acumen__c.field-meta.xml
<CustomField>
    <fullName>Sales_Skills_Business_Acumen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Skills / Business Acumen</label>
    <type>Checkbox</type>
</CustomField>