force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Score</valueSetName>
    </valueSet>
</CustomField>