force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Support_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_to_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support to Manager</label>
    <type>Checkbox</type>
</CustomField>