force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Account_Review__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Review__c</fullName>
    <label>Target Account Review</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>