force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Amex_Leads__c.field-meta.xml
<CustomField>
    <fullName>Target_Amex_Leads__c</fullName>
    <label>Target Amex Leads</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>