force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Target_Campaign_Member__c</fullName>
    <label>Target Campaign Member</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>