force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Target_Feedback__c</fullName>
    <label>Target Feedback</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>