force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Market_Intel__c.field-meta.xml
<CustomField>
    <fullName>Target_Market_Intel__c</fullName>
    <label>Target Market Intel</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>