force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Opp_Gen__c.field-meta.xml
<CustomField>
    <fullName>Target_Opp_Gen__c</fullName>
    <label>Target Opp Gen</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>