force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Target_Renewal_Wins__c.field-meta.xml
<CustomField>
    <fullName>Target_Renewal_Wins__c</fullName>
    <label>Target Renewal Wins</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>