force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Team_Work__c.field-meta.xml
<CustomField>
    <fullName>Team_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Work</label>
    <type>Checkbox</type>
</CustomField>