force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Top_Achiever__c.field-meta.xml
<CustomField>
    <fullName>Top_Achiever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Achiever</label>
    <type>Checkbox</type>
</CustomField>