force-app/main/default/objects/QIS_Sales_Rep_Measure__c/fields/Travel_Show__c.field-meta.xml
<CustomField>
    <fullName>Travel_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Show</label>
    <type>Checkbox</type>
</CustomField>